# mood-board-search

./: .gitignore  AUTOMATION_COMPLETE.md  AUTOMATION_UPDATE_SUMMARY.md  CLAUDE.md  LEARN_CONCEPT_FIX.md  README.md  quick-setup.sh  run-automation.sh  run-tests.sh
backend/: pyproject.toml
backend/cavstudio_backend/: cav.py
frontend/src/components/: ProjectCard.vue
testing/: README.md  package-lock.json  package.json  playwright.config.js  test-image-upload-cav.spec.js  test-learn-concept-button.js  test-learn-concept-button.spec.js  test-navigation-cav.spec.js
